# Hello-MNIST

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: file_reader.cpp  file_reader.h  main.cpp  mnist_data.h  mnist_parser.cpp  mnist_parser.h
src/data/: data_loader.h  mnist_data.h  mnist_loader.cpp  mnist_loader.h  mnist_parser.cpp  mnist_parser.h
src/layer/: dense_layer.cpp  dense_layer.h  layer.h
src/layer/activation/: activation.h  leaky_relu.cpp  leaky_relu.h  relu.cpp  relu.h  softmax.cpp  softmax.h
src/loss/: cross_entropy_loss.cpp  cross_entropy_loss.h  loss.h
src/model/: network.h  trainer.cpp  trainer.h
src/network/: \  model_trainer.cpp  model_trainer.h  neural_network.cpp  neural_network.h
src/network/optimizer/: optimizer.h  sgd_optimizer.cpp  sgd_optimizer.h
src/optimizer/: optimizer.h  sgd.cpp  sgd.h
src/util/: data_utils.cpp  data_utils.h
src/utils/: data_utils.cpp  data_utils.h  file_reader.cpp  file_reader.h
tests/: cross_entropy_loss_test.cpp  mnist_loader_test.cpp  relu_test.cpp  sample.cpp  sgd_test.cpp  softmax_test.cpp  trainer_overfit_test.cpp
